@@ -1,4 +1,4 @@
 module Diakonos
   VERSION       = '0.8.9'
-  LAST_MODIFIED = 'May 14, 2009'
+  LAST_MODIFIED = 'May 26, 2009'
 end
