@@ -9,6 +9,7 @@ Diakonos Changelog
 - Fixed some issues with installer.
 - Changed delete_to_and_from to always assume given character is the left side character when matching pairs.
 - Fixed a line number display bug.
+- X windows pasting handled much better now.
 - Numerous internal refactorings and reorganizations.
 - Accepted patches from Decklin Foster.
 
